# src/swagger/user.yaml
@@ -58,6 +58,35 @@ components:
           type: string
           description: The thumbnail of the user
           example: "https://example.com/thumbnail.jpg"
+    Project:
+      type: object
+      properties:
+        id:
+          type: integer
+          description: The ID of the project
+          example: 1
+        name:
+          type: string
+          description: The name of the project
+          example: "Win-Win Global Efficient Mobile Initiative"
+        department:
+          type: string
+          description: The department of the project
+          example: "Human Resources"
+        startedOn:
+          type: string
+          format: date
+          description: The date the project started
+          example: "2021-01-01"
+        endedOn:
+          type: string
+          format: date
+          description: The date the project ended
+          example: "2021-01-01"
+        description:
+          type: string
+          description: The description of the project
+          example: "This project is a global initiative to improve the efficiency of the company's mobile operations."
 
 paths:
   /api/users:
@@ -83,6 +112,36 @@ paths:
                       $ref: '#/components/schemas/User'
         404:
           description: Users not found
+
+    post:
+      summary: Create a user
+      description: Create a user in the database
+      tags: [Users]
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
+      responses:
+        200:
+          description: A user
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+        400:
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+        500:
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
 
   /api/users/{id}:
     get:
@@ -182,3 +241,93 @@ paths:
                     type: string
                   message:
                     type: string
+
+  /api/users/{id}/projects:
+    get:
+      summary: Get a user's projects
+      description: Get a user's projects from the database
+      tags: [Users]
+      parameters:
+        - name: id
+          in: path
+          required: true
+          type: number
+          description: The ID of the user to get projects for
+      responses:
+        200:
+          description: A list of projects
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: "OK"
+                  message:
+                    type: string
+                    example: "Success"
+                  data:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/Project'
+        404:
+          description: User has no projects
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: "ERROR"
+                  message:
+                    type: string
+                    example: "User has no projects"
+                  data:
+                    type: string
+                    example: "null"
+        500:
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: "ERROR"
+                  message:
+                    type: string
+                    example: "Internal Server Error"
+                  data:
+                    type: string
+                    example: "null"
+
+  /api/users/{id}/roles:
+    get:
+      summary: Get a user's roles
+      description: Get a user's roles from the database
+      tags: [Users]
+      parameters:
+        - name: id
+          in: path
+          required: true
+          type: number
+          description: The ID of the user to get roles for
+      responses:
+        # TODO: Add responses
+
+  /api/users/{id}/phones:
+    get:
+      summary: Get a user's phones
+      description: Get a user's phones from the database
+      tags: [Users]
+      parameters:
+        - name: id
+          in: path
+          required: true
+          type: number
+          description: The ID of the user to get phones for
+      responses:
+        # TODO: Add responses
